--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,20 @@ services:
     command: ["java", "-jar", "application.jar"]
     networks:
       - backendNetwork
+      - frontendNetwork
+
+  swa_frontend:
+    image: nginx:alpine
+    container_name: swa_frontend
+    ports:
+      - 4200:4200
+    depends_on:
+      - swa_backend
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./demo-webshop-ui/dist/demo-webshop-ui/browser/:/usr/share/nginx/html
+    networks:
+      - frontendNetwork
 
 
 volumes:
@@ -35,4 +49,5 @@ volumes:
   
 networks:
   backendNetwork:
+  frontendNetwork:
   
